src/objects/Return_Request_Matrix__mdt/Return_Request_Matrix__mdt.object-meta.xml
<CustomObject>
    <label>Return Request Matrix</label>
    <pluralLabel>Return Request Matrixs</pluralLabel>
</CustomObject>