src/objects/Return_Request_Matrix__mdt/fields/A_C__c.field-meta.xml
<CustomField>
    <fullName>A_C__c</fullName>
    <label>A/C#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>