src/objects/Return_Request_Matrix__mdt/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>