src/objects/Return_Request_Matrix__mdt/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>