src/objects/Return_Request_Matrix__mdt/fields/Form_Factor__c.field-meta.xml
<CustomField>
    <fullName>Form_Factor__c</fullName>
    <label>Form Factor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>