src/objects/Return_Request_Matrix__mdt/fields/Market_Application__c.field-meta.xml
<CustomField>
    <fullName>Market_Application__c</fullName>
    <label>Market Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>