src/objects/Return_Request_Matrix__mdt/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>Part Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>