src/objects/Return_Request_Matrix__mdt/fields/Return_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Return_Instructions__c</fullName>
    <label>Return Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>