src/objects/Return_Request_Matrix__mdt/listViews/Custom.listView-meta.xml
<ListView>
    <fullName>Custom</fullName>
    <columns>DeveloperName</columns>
    <columns>Return_Instructions__c</columns>
    <columns>Location__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Family__c</columns>
    <columns>Form_Factor__c</columns>
    <columns>Configuration__c</columns>
    <columns>Market_Application__c</columns>
    <columns>A_C__c</columns>
    <columns>Part_Number__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>MasterLabel</columns>
    <filterScope>Everything</filterScope>
    <label>Custom</label>
    <language>en_US</language>
</ListView>